<resources>
    <string name="app_name">Audio Memoir</string>
    <string name="all_btn_continue">Continue</string>

    <string name="splash_screen_tv_app_name">AUDIO\nMEMOIR</string>
    <string name="splash_screen_desc_logo">Logo</string>
    <string name="splash_screen_desc_splash">splash</string>

    <string name="main_btn_share_story">Share my story</string>
    <string name="main_btn_listen_story">Listen to a story</string>
    <string name="main_tv_tag">Approach a NFC Tag</string>
    <string name="main_tv_wait">Please wait…</string>

    <string name="feelings_tv_story_about">This story is about:</string>
    <string name="feelings_tv_story_listen">I want to listen stories about:</string>
    <string name="feelings_toast_select_max">Select up to 3 feelings</string>
    <string name="feelings_toast_select_min">Select at least 1 feeling</string>
    <string name="feelings_desc_flip">Flip</string>
    <string name="feelings_desc_choose">Choose placeholder</string>

    <string name="recording_tv_tap_record">Tap to record</string>
    <string name="recording_tv_tap_stop">Recording, tap to stop recording</string>
    <string name="recording_tv_tap_delete_play_save">Tap delete, play or upload</string>
    <string name="recording_tv_playing_stop">Tap to stop playing</string>
    <string name="recording_tv_story_title">Title of your Story</string>
    <string name="recording_hint_title">Title</string>
    <string name="recording_desc_record">Record</string>
    <string name="recording_desc_play_stop">Play/Stop</string>
    <string name="recording_desc_delete">Delete</string>
    <string name="recording_desc_save">Save</string>
    <string name="recording_max">3 min</string>

    <string name="login_btn_sign">Sign in</string>
    <string name="login_tv_sign">Sign in to Record</string>
    <string name="login_et_hint_user">Username</string>
    <string name="login_et_hint_password">Password</string>
    <string name="login_cb_remember">Remember Me</string>
    <string name="login_error_field_emty">Empty field</string>
    <string name="login_toast_wrong_user_or_pass">Wrong username or password</string>
    <string name="login_desc_user">User</string>
    <string name="login_desc_pass">Password</string>

    <string name="upload_cb_disclaimer">I agree to give Museum of Technology rights to share my story with museum visitors.</string>
    <string name="upload_tv_feelings_label">Feelings</string>
    <string name="upload_tv_title_label">Title</string>
    <string name="upload_btn_upload">Upload</string>
    <string name="upload_desc_museo">Museo</string>

    <string name="listening_tv_empty">No stories found</string>
    <string name="bad_feelings_desc_panic">Panic</string>
    <string name="bad_feelings_desc_disgust">Disgust</string>
    <string name="bad_feelings_desc_indifference">Indifference</string>
    <string name="bad_feelings_desc_fear">Fear</string>
    <string name="bad_feelings_desc_anger">Anger</string>
    <string name="bad_feelings_desc_sorrow">Sorrow</string>
    <string name="bad_feelings_desc_shame">Shame</string>
    <string name="bad_feelings_desc_frustration">Frustration</string>
    <string name="bad_feelings_desc_hate">Hate</string>

    <string name="good_feelings_desc_interest">Interest</string>
    <string name="good_feelings_desc_attraction">Attraction</string>
    <string name="good_feelings_desc_surprise">Surprise</string>
    <string name="good_feelings_desc_hope">Hope</string>
    <string name="good_feelings_desc_gratitude">Gratitude</string>
    <string name="good_feelings_desc_joy">Joy</string>
    <string name="good_feelings_desc_relief">Relief</string>
    <string name="good_feelings_desc_pride">Pride</string>
    <string name="good_feelings_desc_love">Love</string>


</resources>
