<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fi.metropolia.audiostory.activities.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/ll_login_sign_in">

        <TextView
            android:text="@string/login_tv_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_login_sign_in"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="30sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:id="@+id/ll_login_user">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_account_circle_white_24px"
                android:id="@+id/iv_login_user"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/login_desc_user"
                android:layout_marginEnd="5dp" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:id="@+id/et_login_user"
                android:hint="@string/login_et_hint_user"
                android:lines="1"
                android:layout_weight="1"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:id="@+id/ll_login_pass">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"

                app:srcCompat="@drawable/ic_lock_outline_white_24px"
                android:id="@+id/iv_login_pass"
                android:contentDescription="@string/login_desc_pass"
                android:layout_marginEnd="5dp" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/et_login_pass"
                android:hint="@string/login_et_hint_password"
                android:lines="1"
                android:layout_weight="1" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_login_sign_in"
            android:text="@string/login_btn_sign"
            android:background="@drawable/pink_button"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:onClick="onSignClick" />

        <CheckBox
            android:text="@string/login_cb_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cb_login_remember"
            android:layout_gravity="center" />
    </LinearLayout>

</RelativeLayout>
