<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="9dp"
    android:paddingEnd="9dp"

    android:id="@+id/bad_feelings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:id="@+id/bad_feeling_row_1"
        android:tag="bad_feeling_row_1"
        android:weightSum="3">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="3dp"

            android:src="@drawable/panic_button"
            android:contentDescription="@string/bad_feelings_desc_panic"
            android:clickable="true"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:tag="Panic"
            android:onClick="onFeelingClick" />


        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="3dp"

            android:src="@drawable/disgust_button"
            android:contentDescription="@string/bad_feelings_desc_disgust"
            android:clickable="true"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:tag="Disgust"
            android:onClick="onFeelingClick"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="3dp"

            android:src="@drawable/indiffrence_button"
            android:contentDescription="@string/bad_feelings_desc_indifference"
            android:clickable="true"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:tag="Indifference"
            android:onClick="onFeelingClick"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:id="@+id/bad_feeling_row_2"
        android:tag="bad_feeling_row_2"
        android:weightSum="3">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="3dp"

            android:src="@drawable/fear_button"
            android:contentDescription="@string/bad_feelings_desc_fear"
            android:clickable="true"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:tag="Fear"
            android:onClick="onFeelingClick"/>


        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="3dp"

            android:src="@drawable/anger_button"
            android:contentDescription="@string/bad_feelings_desc_anger"
            android:clickable="true"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:tag="Anger"
            android:onClick="onFeelingClick"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="3dp"

            android:src="@drawable/sorrow_button"
            android:contentDescription="@string/bad_feelings_desc_sorrow"
            android:clickable="true"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:tag="Sorrow"
            android:onClick="onFeelingClick"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:id="@+id/bad_feeling_row_3"
        android:tag="bad_feeling_row_3"
        android:weightSum="3">


        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="3dp"

            android:src="@drawable/shame_button"
            android:contentDescription="@string/bad_feelings_desc_shame"
            android:clickable="true"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:tag="Shame"
            android:onClick="onFeelingClick"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="3dp"

            android:src="@drawable/frustration_button"
            android:contentDescription="@string/bad_feelings_desc_frustration"
            android:clickable="true"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:tag="Frustration"
            android:onClick="onFeelingClick"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="3dp"

            android:src="@drawable/hate_button"
            android:contentDescription="@string/bad_feelings_desc_hate"
            android:clickable="true"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:tag="Hate"
            android:onClick="onFeelingClick"/>
    </LinearLayout>
</LinearLayout>